--- a/outilstage.css
+++ b/outilstage.css
@@ -20,13 +20,29 @@ body {
     margin-top: 2em; /* Ajoute un espace pour que tout soit visible */
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    max-width: 600px; /* Limite la largeur pour éviter d'étendre trop */
+    max-width: 800px; /* Limite la largeur pour éviter d'étendre trop */
     width: 90%; /* Pour les petits écrans */
     text-align: center;
-    background-image: url("eseo.png");
-    background-repeat: no-repeat;
-    background-position: left top;
-    background-size: 10rcap;
+   
+}
+
+/* Logo + Globe */
+.logo-container {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+}
+
+.globe {
+    font-size: 30px;
+    margin-left: 10px; /* Ajuste l'espacement avec le logo */
 }
 
 /* Titres */
