--- a/outilstage.css
+++ b/outilstage.css
@@ -20,7 +20,7 @@ body {
     margin-top: 2em; /* Ajoute un espace pour que tout soit visible */
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    max-width: 800px; /* Limite la largeur pour éviter d'étendre trop */
+    max-width: 1000px; /* Limite la largeur pour éviter d'étendre trop */
     width: 90%; /* Pour les petits écrans */
     text-align: center;
    
@@ -105,6 +105,18 @@ button:hover {
 
 /* Bouton "Revenir" */
 #back-button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: background-color 0.3s ease;
+}
+
+#rafraichir{
+
     background-color: #007BFF;
     color: white;
     border: none;
